src/expr/src/scalar/snapshots/mz_expr__scalar__func__sub_timestamp_tz_interval.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(is_monotone = \"(true, true)\", is_infix_op = true, sqlname = \"-\")]\nfn sub_timestamp_tz_interval<'a>(\n    a: CheckedTimestamp<DateTime<Utc>>,\n    b: Interval,\n) -> Result<CheckedTimestamp<DateTime<Utc>>, EvalError> {\n    sub_timestamplike_interval(a, b)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct SubTimestampTzInterval;
impl<'a> crate::func::binary::EagerBinaryFunc<'a> for SubTimestampTzInterval {
    type Input1 = CheckedTimestamp<DateTime<Utc>>;
    type Input2 = Interval;
    type Output = Result<CheckedTimestamp<DateTime<Utc>>, EvalError>;
    fn call(
        &self,
        a: Self::Input1,
        b: Self::Input2,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output {
        sub_timestamp_tz_interval(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::SqlColumnType,
        input_type_b: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
    fn is_infix_op(&self) -> bool {
        true
    }
    fn is_monotone(&self) -> (bool, bool) {
        (true, true)
    }
}
impl std::fmt::Display for SubTimestampTzInterval {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("-")
    }
}
impl SubTimestampTzInterval {
    pub const fn func_doc() -> crate::func::FuncDoc {
        crate::func::FuncDoc {
            unique_name: stringify!(sub_timestamp_tz_interval),
            category: "Uncategorized",
            signature: "timestamptz - interval -> timestamptz",
            description: "",
            ..crate::func::FuncDoc::default()
        }
    }
}
fn sub_timestamp_tz_interval<'a>(
    a: CheckedTimestamp<DateTime<Utc>>,
    b: Interval,
) -> Result<CheckedTimestamp<DateTime<Utc>>, EvalError> {
    sub_timestamplike_interval(a, b)
}
