src/expr/src/scalar/snapshots/mz_expr__scalar__func__timezone_interval_time_binary.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(sqlname = \"timezoneit\")]\n/// Converts the time datum `b`, which is assumed to be in UTC, to the timezone that the interval datum `a` is assumed\n/// to represent. The interval is not allowed to hold months, but there are no limits on the amount of seconds.\n/// The interval acts like a `chrono::FixedOffset`, without the `-86,400 < x < 86,400` limitation.\nfn timezone_interval_time_binary(\n    interval: Interval,\n    time: chrono::NaiveTime,\n) -> Result<chrono::NaiveTime, EvalError> {\n    if interval.months != 0 {\n        Err(EvalError::InvalidTimezoneInterval)\n    } else {\n        Ok(time.overflowing_add_signed(interval.duration_as_chrono()).0)\n    }\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct TimezoneIntervalTimeBinary;
impl crate::func::binary::EagerBinaryFunc for TimezoneIntervalTimeBinary {
    type Input1<'a> = Interval;
    type Input2<'a> = chrono::NaiveTime;
    type Output<'a> = Result<chrono::NaiveTime, EvalError>;
    fn call<'a>(
        &self,
        a: Self::Input1<'a>,
        b: Self::Input2<'a>,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output<'a> {
        timezone_interval_time_binary(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::SqlColumnType,
        input_type_b: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        let is_null = nullable
            || (propagates_nulls && (input_type_a.nullable || input_type_b.nullable));
        output.nullable(is_null)
    }
}
impl std::fmt::Display for TimezoneIntervalTimeBinary {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("timezoneit")
    }
}
/// Converts the time datum `b`, which is assumed to be in UTC, to the timezone that the interval datum `a` is assumed
/// to represent. The interval is not allowed to hold months, but there are no limits on the amount of seconds.
/// The interval acts like a `chrono::FixedOffset`, without the `-86,400 < x < 86,400` limitation.
fn timezone_interval_time_binary(
    interval: Interval,
    time: chrono::NaiveTime,
) -> Result<chrono::NaiveTime, EvalError> {
    if interval.months != 0 {
        Err(EvalError::InvalidTimezoneInterval)
    } else {
        Ok(time.overflowing_add_signed(interval.duration_as_chrono()).0)
    }
}
