src/expr/src/scalar/snapshots/mz_expr__scalar__func__timezone_interval_timestamp_binary.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(sqlname = \"timezoneits\")]\n/// Converts the timestamp datum `b`, which is assumed to be in the time of the timezone datum `a` to a timestamptz\n/// in UTC. The interval is not allowed to hold months, but there are no limits on the amount of seconds.\n/// The interval acts like a `chrono::FixedOffset`, without the `-86,400 < x < 86,400` limitation.\nfn timezone_interval_timestamp_binary(\n    interval: Interval,\n    ts: CheckedTimestamp<NaiveDateTime>,\n) -> Result<CheckedTimestamp<DateTime<Utc>>, EvalError> {\n    if interval.months != 0 {\n        Err(EvalError::InvalidTimezoneInterval)\n    } else {\n        match ts.checked_sub_signed(interval.duration_as_chrono()) {\n            Some(sub) => Ok(DateTime::from_naive_utc_and_offset(sub, Utc).try_into()?),\n            None => Err(EvalError::TimestampOutOfRange),\n        }\n    }\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct TimezoneIntervalTimestampBinary;
impl crate::func::binary::EagerBinaryFunc for TimezoneIntervalTimestampBinary {
    type Input1<'a> = Interval;
    type Input2<'a> = CheckedTimestamp<NaiveDateTime>;
    type Output<'a> = Result<CheckedTimestamp<DateTime<Utc>>, EvalError>;
    fn call<'a>(
        &self,
        a: Self::Input1<'a>,
        b: Self::Input2<'a>,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output<'a> {
        timezone_interval_timestamp_binary(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::SqlColumnType,
        input_type_b: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        let is_null = nullable
            || (propagates_nulls && (input_type_a.nullable || input_type_b.nullable));
        output.nullable(is_null)
    }
}
impl std::fmt::Display for TimezoneIntervalTimestampBinary {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("timezoneits")
    }
}
/// Converts the timestamp datum `b`, which is assumed to be in the time of the timezone datum `a` to a timestamptz
/// in UTC. The interval is not allowed to hold months, but there are no limits on the amount of seconds.
/// The interval acts like a `chrono::FixedOffset`, without the `-86,400 < x < 86,400` limitation.
fn timezone_interval_timestamp_binary(
    interval: Interval,
    ts: CheckedTimestamp<NaiveDateTime>,
) -> Result<CheckedTimestamp<DateTime<Utc>>, EvalError> {
    if interval.months != 0 {
        Err(EvalError::InvalidTimezoneInterval)
    } else {
        match ts.checked_sub_signed(interval.duration_as_chrono()) {
            Some(sub) => Ok(DateTime::from_naive_utc_and_offset(sub, Utc).try_into()?),
            None => Err(EvalError::TimestampOutOfRange),
        }
    }
}
