src/expr/src/scalar/snapshots/mz_expr__scalar__func__to_char_timestamp_tz_format.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(output_type = \"String\", sqlname = \"tochartstz\", propagates_nulls = true)]\nfn to_char_timestamp_tz_format<'a>(a: Datum<'a>, format: &str) -> String {\n    let ts = a.unwrap_timestamptz();\n    let fmt = DateTimeFormat::compile(format);\n    fmt.render(&*ts)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct ToCharTimestampTzFormat;
impl<'a> crate::func::binary::EagerBinaryFunc<'a> for ToCharTimestampTzFormat {
    type Input1 = Datum<'a>;
    type Input2 = &'a str;
    type Output = String;
    fn call(
        &self,
        a: Self::Input1,
        b: Self::Input2,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output {
        to_char_timestamp_tz_format(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::SqlColumnType,
        input_type_b: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = <String>::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
    fn introduces_nulls(&self) -> bool {
        <String as ::mz_repr::DatumType<'_, ()>>::nullable()
    }
    fn propagates_nulls(&self) -> bool {
        true
    }
}
impl std::fmt::Display for ToCharTimestampTzFormat {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("tochartstz")
    }
}
fn to_char_timestamp_tz_format<'a>(a: Datum<'a>, format: &str) -> String {
    let ts = a.unwrap_timestamptz();
    let fmt = DateTimeFormat::compile(format);
    fmt.render(&*ts)
}
