src/expr/src/scalar/snapshots/mz_expr__scalar__func__trim.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(sqlname = \"btrim\", output_type = \"String\", propagates_nulls = true)]\nfn trim<'a>(a: Datum<'a>, b: Datum<'a>) -> Datum<'a> {\n    let trim_chars = b.unwrap_str();\n    Datum::from(a.unwrap_str().trim_matches(|c| trim_chars.contains(c)))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct Trim;
impl<'a> crate::func::binary::EagerBinaryFunc<'a> for Trim {
    type Input1 = Datum<'a>;
    type Input2 = Datum<'a>;
    type Output = Datum<'a>;
    fn call(
        &self,
        a: Self::Input1,
        b: Self::Input2,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output {
        {
            let trim_chars = b.unwrap_str();
            Datum::from(a.unwrap_str().trim_matches(|c| trim_chars.contains(c)))
        }
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::ColumnType,
        input_type_b: mz_repr::ColumnType,
    ) -> mz_repr::ColumnType {
        use mz_repr::AsColumnType;
        let output = <String>::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
    fn introduces_nulls(&self) -> bool {
        <String as ::mz_repr::DatumType<'_, ()>>::nullable()
    }
    fn propagates_nulls(&self) -> bool {
        true
    }
}
impl std::fmt::Display for Trim {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("btrim")
    }
}
